--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </head>
 <body>
     <div id="fade-inout"><h2>NAČÍTÁNÍ...</h2></div>
-    <audio id="background-audio" src="sounds/street.ogg" autoplay loop></audio>
+    <audio id="background-audio" src="sounds/street.ogg" autoplay muted loop></audio>
     <div class="container">
         <img id="bgimg" src="" class="responsive-image" alt="img" draggable="false">
         <img id="p2" src="img/teaser2.webp" alt="paper" draggable="false">
