--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body, html{
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            /*overflow: hidden;*/
             user-select: none;
             -webkit-user-select: none;
             font-family:'Lucida Sans';
@@ -133,6 +133,7 @@
     </div>
     <p id="countdown"></p>
     <div class="overlay"></div>
+    <img src="img/grain.gif" alt="GIF">
 
     <script>
         var countdown = "";
