--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body, html{
             margin: 0;
             padding: 0;
-            /*overflow: hidden;*/
+            overflow: hidden;
             user-select: none;
             -webkit-user-select: none;
             font-family:'Lucida Sans';
@@ -124,7 +124,7 @@
 </head>
 <body>
     <div id="fade-inout"><h2>NAČÍTÁNÍ...</h2></div>
-    <audio id="background-audio" src="sounds/street.ogg" autoplay muted loop></audio>
+    <audio id="background-audio" src="sounds/street.ogg" autoplay loop></audio>
     <div class="container">
         <img id="bgimg" src="" class="responsive-image" alt="img" draggable="false">
         <img id="p2" src="img/teaser2.webp" alt="paper" draggable="false">
@@ -135,6 +135,7 @@
     <div class="overlay"></div>
 
     <script>
+        document.getElementById("background-audio").volume = 0.2;
         var countdown = "";
         const countdownText = document.getElementById("countdown");
         function timeUntil() {
@@ -164,9 +165,6 @@
 
         window.addEventListener('load', () => {
             setTimeout(() => {
-                const audio = document.getElementById('background-audio');
-                audio.volume = 0.2;
-                audio.muted = false;
                 const fadeOverlay = document.getElementById('fade-inout');
                 fadeOverlay.style.opacity = '0';
                 setTimeout(() => {
