--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Čas se krátí...">
+    <meta property="og:description" content="Vocodex demo">
+    <meta property="og:url" content="https://vocodexdemo.site">
+    <meta property="og:type" content="website"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>--</title>
