--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="Čas se krátí...">
     <meta property="og:description" content="Vocodex demo">
-    <meta property="og:image" content="https://vocodexdemo.site/img/teaser.webp">
+    <meta property="og:image" content="https://vocodexdemo.site/img/eyes.png">
     <meta property="og:url" content="https://vocodexdemo.site">
     <meta property="og:type" content="website"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
