--- a/18-12-2024.html
+++ b/18-12-2024.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>--</title>
+    <title>Výslech - 18. 12. 24</title>
     <link rel="icon" href="icons/countdown.ico?v=2" type="image/x-icon">
     <style>
         h3{
