--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             user-select: none;
             -webkit-user-select: none;
         }
+        .hidden-link {
+            display: none;
+        }
         p{
             font-family:'Lucida Sans';
             position: absolute;
@@ -139,6 +142,7 @@
     </div>
     <p id="countdown"></p>
     <div class="overlay"></div>
+    <a href="/vyslech.html" class="hidden-link">Hi</a>
 
     <script>
         document.getElementById("background-audio").volume = 0.2;
