--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             user-select: none;
             -webkit-user-select: none;
         }
-        .hidden-link {
+        .the-link {
             display: none;
         }
         p{
@@ -142,7 +142,7 @@
     </div>
     <p id="countdown"></p>
     <div class="overlay"></div>
-    <a href="18-12-2024.html" class="hidden-link">Hi</a>
+    <a href="18-12-2024.html" class="the-link">..</a>
 
     <script>
         document.getElementById("background-audio").volume = 0.2;
