--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             let minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
             let seconds = Math.floor((diff % (1000 * 60)) / 1000);
             if (days > 0) hours++;
+            if (hours >= 24) { days++; hours = 0; };
             const countdown = `${days} d, ${hours} h, ${minutes} m, ${seconds} s`;
             document.title = countdown;
             countdownText.innerHTML = countdown;
