--- a/18-12-2024.html
+++ b/18-12-2024.html
@@ -8,6 +8,7 @@
     <meta property="og:url" content="https://vocodexdemo.site">
     <meta property="og:type" content="website"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Výslech - 18. 12. 24</title>
     <link rel="icon" href="icons/countdown.ico?v=2" type="image/x-icon">
