--- a/newIndex.html
+++ b/newIndex.html
@@ -5,7 +5,7 @@
 
     <meta property="og:title" content="Vocodex demo">
     <meta property="og:description" content="Stáhněte si vocodex demo sample pack ještě dnes!">
-    <meta property="og:image" content="hub/main.webp">
+    <meta property="og:image" content="about/main.webp">
     <meta property="og:url" content="https://vocodexdemo.site">
     <meta property="og:type" content="website">
 
