--- a/warning.html
+++ b/warning.html
@@ -27,7 +27,7 @@
             možná i s trochou horkého paprikového prášku navrch. 
             A aby toho nebylo málo, dostanete také k ničemu Serum presety, 
             které pravděpodobně nikdy nevyužijete, ale rozhodně vám 
-            dodají pocit, že jste na správné cestě k hudbě (mebp spíš od hudby).<br>
+            dodají pocit, že jste na správné cestě k hudbě (nebo spíš od hudby).<br>
             Takže ještě jednou - varujeme všechen lid před jakýmkoli používáním tohoto sample packu!<br><br><br>
             <button id="randomButton">ZÍSKAT NYNÍ!</button>
         </p>
