--- a/about.html
+++ b/about.html
@@ -242,7 +242,7 @@
         </p>
         <h2 data-aos="fade-up">Děkujeme!</h2>
     </div>
-    <script src="js/about.js"></script>
+    <script src="js/about?v=1.0.js"></script>
     <script src="js/audioPlayer.js"></script>
     <script src="js/burger.js"></script>
     <script src="js/hub-button.js"></script>
