--- a/about.html
+++ b/about.html
@@ -38,14 +38,15 @@
         <h2 data-aos="fade-up">Jak to celé vzniklo?</h2>
         <p data-aos="fade-up">
             Album vzniklo neplánovaně v roce 2024, když Playarus vytvořil remake svého staršího tracku. Výsledkem toho byl 
-            melodický shitpost s názvem "Nová složka". O několik dní později vznikl remix tohoto tracku od Zoltyho, což 
-            odstartovalo diskuzi o tom, že by se mohlo remixovat dál a dál. Nakonec vznikl nápad místo série remixů udělat 
-            celé album. První skladba vznikla 20. června 2024 a od té doby probíhala nepřetržitá práce na albu až do jeho vydání.
+            melodický shitpost s názvem <a href="https://soundcloud.com/playarus/nova-slozka-2" target="_blank">Nová složka</a>. 
+            O několik dní později vznikl remix tohoto tracku od Zoltyho, což odstartovalo diskuzi o tom, že by se mohlo
+            remixovat dál a dál. Nakonec vznikl nápad místo série remixů udělat celé album. První skladba vznikla 20.
+            června 2024 a od té doby probíhala nepřetržitá práce na albu až do jeho vydání.
         </p>
     </div>
     <div class="sectionBlock">
         <div class="section" id="s1">
-            <h2 data-aos="fade-up">Dusty machine</h2>
+            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Dusty machine</h2></a>
             <h3 data-aos="fade-up"><i>Zolty (feat. Playarus)</i></h3>
             <p data-aos="fade-up">
                 Tato skladba vznikla v době, kdy měl Playarus praxi v jedné IT firmě. Jednoho dne přišel zákazník s nefunkčním 
@@ -57,7 +58,7 @@
             </p>
         </div>
         <div class="section" id="s2">
-            <h2 data-aos="fade-up">Time change</h2>
+            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Time change</h2></a>
             <h3 data-aos="fade-up"><i>Playarus</i></h3>
             <p data-aos="fade-up">
                 Nikdy není na škodu procházet náhodná videa na YouTube - nikdy nevíte, na co narazíte. Třeba na pana Jirku a 
@@ -72,7 +73,7 @@
     </div>
     <div class="sectionBlock">
         <div class="section" id="s3">
-            <h2 data-aos="fade-up">Rap battle</h2>
+            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Rap battle</h2></a>
             <h3 data-aos="fade-up"><i>Playarus & PeSeRis (prod. Zolty)</i></h3>
             <p data-aos="fade-up">
                 Nikde nesmím chybět rap! (Dobře, pár výjimek by se našlo, ale toto mezi ně nepatří). Jakmile padla myšlenka 
@@ -83,7 +84,7 @@
             </p>
         </div>
         <div class="section" id="s4">
-            <h2 data-aos="fade-up">Skibidi Toilet Orchestral Remix</h2>
+            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Skibidi Toilet Orchestral Remix</h2></a>
             <h3 data-aos="fade-up"><i>Zolty</i></h3>
             <p data-aos="fade-up">
                 Co je vrchol brainrotu? Skibidi Toilet! Už od začátku bylo Playarusovi jasné, že tento skvost musí být součástí 
@@ -96,10 +97,10 @@
     </div>
     <div class="sectionBlock">
         <div class="section" id="s5">
-            <h2 data-aos="fade-up">The Pumping Grounds</h2>
+            <a href="google.com" target="_blank"><h2 data-aos="fade-up">The Pumping Grounds</h2></a>
             <h3 data-aos="fade-up"><i>Playarus & Aktex</i></h3>
             <p data-aos="fade-up">
-                YouTube Shorts jsou opravdu zvláštní místo. Je možné tam narazit na úplně všechno. Třeba na mistra Rastislava, 
+                YouTube Shorts jsou opravdu zvláštní místo. Je možné tam narazit na úplně všechno. Třeba na mistra <a href="https://www.youtube.com/@RastislavMatus-on2rn" target="_blank">Rastislava</a>, 
                 který s klidným a tichým hlasem dokáže vysvětlil úplně cokoli - třeba funkci čerpadel. Jeho video skoro působilo 
                 jako ASMR pro kutilské nadšence. Jenže právě tahle energie si říkala o úplný opak - o pořádný tearout remix.<br>
                 Playarus neztrácel čas a zavolal na pomoc Aktexe, který se v tomto žánru skvěle vyzná. Společnými silami 
@@ -107,31 +108,31 @@
             </p>
         </div>
         <div class="section" id="s6">
-            <h2 data-aos="fade-up">I got the feeling</h2>
+            <a href="google.com" target="_blank"><h2 data-aos="fade-up">I got the feeling</h2></a>
             <h3 data-aos="fade-up"><i>Zolty</i></h3>
             <p data-aos="fade-up">
-                Jeden z typických Gen Z žánrů, který sice neprorazil úplně do mainstremu, ale má svůj unikátní vibe, je dariacore. 
+                Jeden z typických Gen Z žánrů, který sice neprorazil úplně do mainstremu, ale má svůj unikátní vibe, je <a href="https://rateyourmusic.com/genre/dariacore/" target="_blank">dariacore</a>. 
                 Není to vyloženě shitpost žánr, ale jeho přehypovaná a chaotická energie nám přišla jako skvělý doplněk do našeho 
-                alba.<br>Proto jsme si "vypůjčili" vokály z Locked Out of Heaven od Bruna Marse a z původně klidné skladby se stal 
+                alba.<br>Proto jsme si "vypůjčili" vokály z <a href="https://youtu.be/e-fA-gBCkj0?si=p4GqCaNkEikjrPbn" target="_blank">Locked Out of Heaven</a> od Bruna Marse a z původně klidné skladby se stal 
                 přehypovaný track.
             </p>
         </div>
     </div>
     <div class="sectionBlock">
         <div class="section" id="s7">
-            <h2 data-aos="fade-up">Mighty Carp</h2>
+            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Mighty Carp</h2></a>
             <h3 data-aos="fade-up"><i>Zolty</i></h3>
             <p data-aos="fade-up">
-                Tento žánr nemá kořeny v Gen Z kultuře – jeho základy sahají až do 90. let. Dnešní podoba se však výrazně 
-                liší od té původní a často by se to dalo označit jako "kawaii EDM", což je značný odklon od původního záměru. 
-                Svou energií trochu navazuje na I got the feeling, a právě proto jsme se rozhodli pokračovat v tomto stylu.<br>Proces 
+                <a href="https://cs.wikipedia.org/wiki/Happy_Hardcore" target="_blank">Happy hardcore</a> je žánr, který nemá kořeny v Gen Z kultuře – jeho základy sahají až do 90. let. Dnešní podoba se však výrazně 
+                liší od té původní a často by se to dalo označit jako <b>kawaii EDM</b>, což je značný odklon od původního záměru. 
+                Svou energií trochu navazuje na <a href="#s6">I got the feeling</a>, a právě proto jsme se rozhodli pokračovat v tomto stylu.<br>Proces 
                 tvorby ale nebyl úplně jednoduchý. Zolty na tracku začal pracovat asi měsíc před vydáním alba, aniž by měl 
                 jasnou představu, do čeho se vlastně pouští. I když šlo o jeho první pokus s happy hardcore, výsledek rozhodně 
                 stojí za to!
             </p>
         </div>
         <div class="section" id="s8">
-            <h2 data-aos="fade-up">Vocodex demo</h2>
+            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Vocodex demo</h2></a>
             <h3 data-aos="fade-up"><i>Playarus</i></h3>
             <p data-aos="fade-up">
                 Toto je ta věc, co odstartovala celé album. První verze vznikla úplně spontánně už před několika lety - 
