--- a/about.html
+++ b/about.html
@@ -39,7 +39,8 @@
         <p data-aos="fade-up">
             Album vzniklo neplánovaně v roce 2024, když Playarus vytvořil remake svého staršího tracku. Výsledkem toho byl 
             melodický shitpost s názvem <a href="https://soundcloud.com/playarus/nova-slozka-2" target="_blank">Nová složka</a>. 
-            O několik dní později vznikl remix tohoto tracku od Zoltyho, což odstartovalo diskuzi o tom, že by se mohlo
+            O několik dní později vznikl <a href="https://soundcloud.com/playarus/nova-slozka-2_2-zolty-remix/s-WB0MhhVd5r7?si=9cbbd37d68ae42bf98a1b0ec543ff763&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">remix</a> 
+            tohoto tracku od Zoltyho, což odstartovalo diskuzi o tom, že by se mohlo
             remixovat dál a dál. Nakonec vznikl nápad místo série remixů udělat celé album. První skladba vznikla 20.
             června 2024 a od té doby probíhala nepřetržitá práce na albu až do jeho vydání.
         </p>
