--- a/newIndex.html
+++ b/newIndex.html
@@ -27,7 +27,9 @@
     <main>
         <header>
             <div id="blurDiv"></div>
-            <img src="img/logo.webp" alt="Logo" style="height: 17vh; position: relative; top: 0.5em; ">
+            <a href="index.html">
+            <img src="img/logo.webp" alt="Logo" style="height: 17vh; position: relative; top: 0.5em;">
+            </a>
             <div id="header1">
                 <p><a href="#uvodni-stranka">ÚVOD</a></p>
                 <p><a href="#ukazky">UKÁZKY</a></p>
