--- a/newIndex.html
+++ b/newIndex.html
@@ -27,8 +27,8 @@
     <main>
         <header>
             <div id="blurDiv"></div>
-            <a href="index.html">
-            <img src="img/logo.webp" alt="Logo" style="height: 17vh; position: relative; top: 0.5em;">
+            <a href="index.html" style="text-decoration: none; pointer-events: auto;">
+             <img src="img/logo.webp" alt="Logo" style="height: 17vh; position: relative; top: 0.5em;" onmouseover="this.style.animation='none'; this.style.transform='none'; this.style.opacity='1';">
             </a>
             <div id="header1">
                 <p><a href="#uvodni-stranka">ÚVOD</a></p>
