--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
             <a href="google.com" target="_blank"><h2 data-aos="fade-up">Rap battle</h2></a>
             <h3 data-aos="fade-up"><i>Playarus & PeSeRis (prod. Zolty)</i></h3>
             <p data-aos="fade-up">
-                Nikde nesmím chybět rap! (Dobře, pár výjimek by se našlo, ale toto mezi ně nepatří). Jakmile padla myšlenka 
+                Nikde nesmí chybět rap! (Dobře, pár výjimek by se našlo, ale toto mezi ně nepatří). Jakmile padla myšlenka 
                 na rapový track, okamžitě se začal hledat způsob, jak ho zasadit mezi ostatní skladby. První nápad byl, 
                 že by Playarus udělal freestyle o všech podivnostech z Vocodex Explorer Edition a minulých aprílových vydání.<br>
                 Ale přišel ještě lepší plán - kontaktovali jsme PeSeRise, nejlepšího rappera, a nabídli mu uskutečnit rap 
