--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="name"
                     data-image="lidi/bloodshed.webp"
                     data-description="Dabér obchodu."
-                    data-link="https://soundcloud.com/groobinekgames-null"
+                    data-link="https://soundcloud.com/bloodsheddd"
                     data-link-name="SoundCloud">
                     <p class="montserrat" data-aos="fade-up">Bloodshed</p></div>
                 <!-- CHEEZIK -->
