--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     </div>
     <div class="sectionBlock">
         <div class="section" id="s1">
-            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Dusty machine</h2></a>
+            <a href="https://youtu.be/uLB7ktLvtyA?si=TH55oecFk6aaATvj&t=15" target="_blank"><h2 data-aos="fade-up">Dusty machine</h2></a>
             <h3 data-aos="fade-up"><i>Zolty (feat. Playarus)</i></h3>
             <p data-aos="fade-up">
                 Tato skladba vznikla v době, kdy měl Playarus praxi v jedné IT firmě. Jednoho dne přišel zákazník s nefunkčním 
@@ -59,7 +59,7 @@
             </p>
         </div>
         <div class="section" id="s2">
-            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Time change</h2></a>
+            <a href="https://youtu.be/uLB7ktLvtyA?si=0wOSv87tI2SGOxfO&t=216" target="_blank"><h2 data-aos="fade-up">Time change</h2></a>
             <h3 data-aos="fade-up"><i>Playarus</i></h3>
             <p data-aos="fade-up">
                 Nikdy není na škodu procházet náhodná videa na YouTube - nikdy nevíte, na co narazíte. Třeba na pana Jirku a 
@@ -74,7 +74,7 @@
     </div>
     <div class="sectionBlock">
         <div class="section" id="s3">
-            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Rap battle</h2></a>
+            <a href="https://youtu.be/uLB7ktLvtyA?si=THoVCG8f_hHFO0pR&t=438" target="_blank"><h2 data-aos="fade-up">Rap battle</h2></a>
             <h3 data-aos="fade-up"><i>Playarus & PeSeRis (prod. Zolty)</i></h3>
             <p data-aos="fade-up">
                 Nikde nesmí chybět rap! (Dobře, pár výjimek by se našlo, ale toto mezi ně nepatří). Jakmile padla myšlenka 
@@ -85,7 +85,7 @@
             </p>
         </div>
         <div class="section" id="s4">
-            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Skibidi Toilet Orchestral Remix</h2></a>
+            <a href="https://youtu.be/uLB7ktLvtyA?si=eNuFQ-W9FmjkeUKy&t=726" target="_blank"><h2 data-aos="fade-up">Skibidi Toilet Orchestral Remix</h2></a>
             <h3 data-aos="fade-up"><i>Zolty</i></h3>
             <p data-aos="fade-up">
                 Co je vrchol brainrotu? Skibidi Toilet! Už od začátku bylo Playarusovi jasné, že tento skvost musí být součástí 
@@ -98,7 +98,7 @@
     </div>
     <div class="sectionBlock">
         <div class="section" id="s5">
-            <a href="google.com" target="_blank"><h2 data-aos="fade-up">The Pumping Grounds</h2></a>
+            <a href="https://youtu.be/uLB7ktLvtyA?si=D_5-txmpKrfazsQi&t=971" target="_blank"><h2 data-aos="fade-up">The Pumping Grounds</h2></a>
             <h3 data-aos="fade-up"><i>Playarus & Aktex</i></h3>
             <p data-aos="fade-up">
                 YouTube Shorts jsou opravdu zvláštní místo. Je možné tam narazit na úplně všechno. Třeba na mistra <a href="https://www.youtube.com/@RastislavMatus-on2rn" target="_blank">Rastislava</a>, 
@@ -109,7 +109,7 @@
             </p>
         </div>
         <div class="section" id="s6">
-            <a href="google.com" target="_blank"><h2 data-aos="fade-up">I got the feeling</h2></a>
+            <a href="https://youtu.be/uLB7ktLvtyA?si=gP0EvhW3VSW7nwpW&t=1311" target="_blank"><h2 data-aos="fade-up">I got the feeling</h2></a>
             <h3 data-aos="fade-up"><i>Zolty</i></h3>
             <p data-aos="fade-up">
                 Jeden z typických Gen Z žánrů, který sice neprorazil úplně do mainstremu, ale má svůj unikátní vibe, je <a href="https://rateyourmusic.com/genre/dariacore/" target="_blank">dariacore</a>. 
@@ -121,7 +121,7 @@
     </div>
     <div class="sectionBlock">
         <div class="section" id="s7">
-            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Mighty Carp</h2></a>
+            <a href="https://youtu.be/uLB7ktLvtyA?si=gJQD4LvgpKO74Xg9&t=1520" target="_blank"><h2 data-aos="fade-up">Mighty Carp</h2></a>
             <h3 data-aos="fade-up"><i>Zolty</i></h3>
             <p data-aos="fade-up">
                 <a href="https://cs.wikipedia.org/wiki/Happy_Hardcore" target="_blank">Happy hardcore</a> je žánr, který nemá kořeny v Gen Z kultuře – jeho základy sahají až do 90. let. Dnešní podoba se však výrazně 
@@ -133,7 +133,7 @@
             </p>
         </div>
         <div class="section" id="s8">
-            <a href="google.com" target="_blank"><h2 data-aos="fade-up">Vocodex demo</h2></a>
+            <a href="https://youtu.be/uLB7ktLvtyA?si=iMMrzLmcAhXC9v4H&t=1733" target="_blank"><h2 data-aos="fade-up">Vocodex demo</h2></a>
             <h3 data-aos="fade-up"><i>Playarus</i></h3>
             <p data-aos="fade-up">
                 Toto je ta věc, co odstartovala celé album. První verze vznikla úplně spontánně už před několika lety - 
