--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             </div>
             <img src="img/pack.webp" alt="img" data-aos="fade-up">
         </div>
+        <!-- TV -->
+        <div id="tv">
+            <img id="tv-image" src="img/teaser2026_3.webp" alt="tv image">
+        </div>
         <!-- UKAZKY ZVUKU -->
         <div id="ukazky">
             <h1 data-aos="fade-up">Co v packu najdete?</h1>
