--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </header>
         <div id="uvodni-stranka">
             <div>
-                <h1 data-aos="fade-up">VOCODEX<br>SAMPLER PACK</h1>
+                <h1 data-aos="fade-up">NIGGA DIDDY EPSTEIN<br>SAMPLER PACK</h1>
                 <p data-aos="fade-up">Revoluční sample pack co musí mít každý!</p>
                 <button onclick="startFakeLoading()" data-aos="fade-up"><b>ZÍSKAT NYNÍ!</b></button>
             </div>
@@ -262,4 +262,5 @@
 
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="vocodexdemo" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </body>
+
 </html>
