--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </header>
         <div id="uvodni-stranka">
             <div>
-                <h1 data-aos="fade-up">NIGGA DIDDY EPSTEIN<br>SAMPLER PACK</h1>
+                <h1 data-aos="fade-up">VOCODEX<br>SAMPLER PACK</h1>
                 <p data-aos="fade-up">Revoluční sample pack co musí mít každý!</p>
                 <button onclick="startFakeLoading()" data-aos="fade-up"><b>ZÍSKAT NYNÍ!</b></button>
             </div>
@@ -264,3 +264,4 @@
 </body>
 
 </html>
+
