--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
             <p><a href="index.html#ukazky">UKÁZKY</a></p>
             <p><a href="#start">O ALBU</a></p>
             <p><a href="index.html#credits">CREDITS</a></p>
+            <p><a href="#tv">???</a></p>
         </div>
         <button id="burgerBtn" onclick="bugerBtnClick()"></button>
     </header>
@@ -252,3 +253,4 @@
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="vocodexdemo" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </body>
 </html>
+
