--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <div class="uvod" id="start">
         <h1 data-aos="fade-up">VOCODEX EXPLORER EDITION</h1>
         <div id="uvod-podnadpis" data-aos="fade-up">
-            <p>Aprílový projekt roku 2025</p>
+            <p>Aprílový projekt od roku 2025</p>
             <p>Zolty & Playarus</p>
         </div>
     </div>
@@ -253,4 +253,5 @@
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="vocodexdemo" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </body>
 </html>
+
 
